Bug 256003. Remove -moz-user-focus from html.css, forms.css, ua.css. It's been deprecated from use in HTML. Patch by Martijn Wargers. r=bryner, sr=roc